tests/invalid/BadIfCondition.java
class BadIfCondition {
    public int check(int n) {
        if n == 0 {
            return 1;
        }
        return n;
    }
}
